1/8/14 use toExponential instead of toPrecision in PHUtils.toTimesTenString
# 1.0.0-dev.3 1/8/14
1/8/14 show graph guides only in dev mode
1/6/14 add multi-line labels to units ABSwitch, put 'Graph' in title bar
1/6/14 change title in graph's bar when units are changed
1/6/14 delete the rightTitle option from ExpandCollapseBar, add setTitle function
1/6/14 show zoom buttons only for Linear scale
1/6/14 wire up log graph to display quantity (moles)
1/6/14 add minor tick marks to graph, add options
1/6/14 move graph indicators when concentrations change
1/3/14 add additional options to LogConcentrationGraph
1/3/14 add placeholder for quantity graph, wire up to AB switch
1/3/14 wire up graph indicator values to solution
1/3/14 make graph indicators non-interactive by default (no handle, no shadow)
1/3/14 optional handle on graph indicators
1/2/14 move graph components to common/view/graph/
1/2/14 create subtypes for graph indicators
1/2/14 support various locations of pointer on graph indicator
1/2/14 add optional drop-shadow to graph indicator
12/26/13 more work on graph indicator
12/26/13 partial implementation of graph indicator
12/23/13 remove unused imports, identified by adding 'unused: true' to jshint-options.js
12/23/13 Basics: revert pH probe and wire to back, so that dashed indicator line is visible
12/23/13 add 'in part' to RSC funding notice
12/20/13 cleanup of color-stop in Solute
12/20/13 move computation of color into Solute, since it knows about the color scheme
12/20/13 make solution color change more slowly by moving optional color-stop from 0.5 to 0.25, and making the color-stop ratio configurable per solute, ph-scale-basics#34
12/20/13 move duplicate code related to filling/draining into Solution model element
12/20/13 fix: pH value changes when draining at low volume, ph-scale-basics#19
12/20/13 change import pattern for dot.Util.log10
12/20/13 add implementation-notes.txt and model.txt